更新第五次实验报告

--- a/作业5/第五次实验报告/第五次实验报告.tex
+++ b/作业5/第五次实验报告/第五次实验报告.tex
@@ -10,27 +10,6 @@
 \usepackage{ctex}
 \usepackage{fontspec}
 \usepackage{listings}
-\usepackage{pxfonts}
-% The following code is for matlab language
-\lstset{
-    columns=fixed,     
-    basicstyle = \tt,           % 基本样式 + 小号字体  
-    %numbers=left,    % 在左侧显示行号
-    frame=none,     % 不显示背景边框
-    breaklines = true,                  % 代码过长则换行
-    backgroundcolor=\color[RGB]{245,245,244},  % 设定背景颜色
-    keywordstyle=\color[RGB]{40,40,255},         % 设定关键字颜色
-    % numberstyle=\footnotesize\color{darkgray},    % 设定行号格式
-    commentstyle=\it\color[RGB]{0,96,96},         % 设置代码注释的格式
-    stringstyle=\rmfamily\slshape\color[RGB]{128,0,0},   % 设置字符串格式
-    showstringspaces=false,   % 不显示字符串中的空格
-    language=matlab,             % 设置语言
-    extendedchars=false,
-    %basicstyle=Consolas
-    tabsize=4,
-    upquote=true,
-    %literate={'}{\textquotedb}1
-}
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
@@ -81,7 +60,7 @@
 \end{align}
 
 \subsection{采样间隔误差对干涉方程的影响}
-人为进行动镜的平移过程通常掺杂着过程噪声。过程噪声的形式多种多样，常见的简单过程噪声类型为正弦噪声、随机噪声与线性噪声。然而，外部环境是一个不可预测的变量，在不同时刻的噪声类型通常是不相关且随机的，这种随机性带给光谱测量的影响是复杂性的。在操作不当的情况下，动镜移动的距离受到过程噪声的影响较大时，得到的傅立叶变换光谱测量曲线具备较低的可信度同时带来了阅读上的复杂性。
+人为进行动镜的平移过程通常掺杂着过程噪声。过程噪声的形式多种多样，常见的简单过程噪声类型为正弦噪声、随机噪声与线性噪声。然而，外部环境是一个不可预测的变量，在不同时刻的噪声类型通常是不相关且随机的，这种随机性带给光谱测量的影响是复杂性的。在操作不当的情况下，动镜移动的距离受到过程噪声的影响较大时，得到的光谱测量曲线具备较低的可信度同时带来了阅读上的复杂性。
 
 动镜移动时过程噪声带来的采样间隔误差是不可避免的，采样间隔误差的直接影响主要体现在对公式(\ref{eq1})中扫描长度$x$的影响:
 \begin{align}
@@ -182,7 +161,7 @@
 	\centerline{
 		\includegraphics[width=10cm]{4.png} 	
 	}
-	\caption{正弦形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的傅立叶变换光谱测量曲线}
+	\caption{正弦形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的光谱测量曲线}
 	\label{pic4}
 \end{figure}
 
@@ -190,7 +169,7 @@
 	\centerline{
 		\includegraphics[width=10cm]{5.png} 	
 	}
-	\caption{随机形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的傅立叶变换光谱测量曲线}
+	\caption{随机形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的光谱测量曲线}
 	\label{pic5}
 \end{figure}
 
@@ -198,17 +177,17 @@
 	\centerline{
 		\includegraphics[width=10cm]{6.png} 	
 	}
-	\caption{线性形式的动镜倾斜误差与正弦形式的采样间隔误差同时作用后的傅立叶变换光谱测量曲线}
+	\caption{线性形式的动镜倾斜误差与正弦形式的采样间隔误差同时作用后的光谱测量曲线}
 	\label{pic6}
 \end{figure}
 
 图\ref{pic4}、图\ref{pic5}与图\ref{pic6}分别显示了同时叠加动镜倾斜误差与采样间隔误差时的干涉图与傅里叶变换后的光谱测量曲线。每张图第一行表示叠加的动镜倾斜误差与采样间隔误差的类型，左半部分为动镜倾斜误差的变换曲线，右半部分为叠加的采样间隔误差。第二行表示原始未叠加动镜倾斜误差时候的干涉图与傅里叶变换光谱测量曲线。第三行展示了叠加对应的动镜倾斜误差干涉图与傅里叶变换光谱测量曲线。图片第四行为叠加动镜倾斜误差前后傅里叶变换光谱测量曲线的比较。
 
-图\ref{pic4}显示了正弦形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的傅立叶变换光谱测量曲线结果。可以看到，叠加联合噪声后的干涉图包络按照动镜倾斜误差的形式变化。同时，叠加联合噪声后的光谱测量曲线的主峰幅度有一定的下降，主峰峰值的下降导致了主峰半峰全宽的增加，光谱测量曲线还出现了侧峰的现象。
+图\ref{pic4}显示了正弦形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的光谱测量曲线结果。可以看到，叠加联合噪声后的干涉图包络按照动镜倾斜误差的形式变化。同时，叠加联合噪声后的光谱测量曲线的主峰幅度有一定的下降，主峰峰值的下降导致了主峰半峰全宽的增加，光谱测量曲线还出现了侧峰的现象。
 
-图\ref{pic5}显示了随机形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的傅立叶变换光谱测量曲线结果。可以看到，叠加联合噪声后的干涉图包络按照动镜倾斜误差的形式变化。叠加联合噪声后的光谱测量曲线的主峰幅度没有出现峰值下降的现象，但由于存在线性形式的采样间隔误差导致了主峰半峰全宽的增加，光谱测量曲线并没有出现侧峰的现象。
+图\ref{pic5}显示了随机形式的动镜倾斜误差与线性形式的采样间隔误差同时作用后的光谱测量曲线结果。可以看到，叠加联合噪声后的干涉图包络按照动镜倾斜误差的形式变化。叠加联合噪声后的光谱测量曲线的主峰幅度没有出现峰值下降的现象，但由于存在线性形式的采样间隔误差导致了主峰半峰全宽的增加，光谱测量曲线并没有出现侧峰的现象。
 
-图\ref{pic6}显示了线性形式的动镜倾斜误差与正弦形式的采样间隔误差同时作用后的傅立叶变换光谱测量曲线结果。可以看到，叠加联合噪声后的干涉图包络按照动镜倾斜误差的形式变化。叠加联合噪声后的光谱测量曲线的主峰幅度出现峰值下降的现象，但由于存在线性形式的动镜倾斜误差导致了主峰出现侧峰的现象，同时由于正弦形式的采样间隔误差导致了光谱测量曲线的主峰出现半峰全宽变宽的现象。
+图\ref{pic6}显示了线性形式的动镜倾斜误差与正弦形式的采样间隔误差同时作用后的光谱测量曲线结果。可以看到，叠加联合噪声后的干涉图包络按照动镜倾斜误差的形式变化。叠加联合噪声后的光谱测量曲线的主峰幅度出现峰值下降的现象，但由于存在线性形式的动镜倾斜误差导致了主峰出现侧峰的现象，同时由于正弦形式的采样间隔误差导致了光谱测量曲线的主峰出现半峰全宽变宽的现象。
 
 \section{结语}
 本实验完成了利用Python仿真动镜倾斜误差与采样间隔误差两个因素同时影响下的傅里叶变换光谱测量系统的光谱测量曲线。
